# OpenPP

./: .gitignore  README.md
Sources/: OpenppConfig.txt
Sources/AutomaticTesting/FailTest/: CMakeLists.txt
Sources/AutomaticTesting/SuccessTest/: CMakeLists.txt
Sources/AutomaticTesting/TestApplication/Gui/: mainwindow.ui
Sources/include/Utility/: String.hpp
